# MyPongCmake

./: .gitignore  CMakeLists.txt  README.dm  README.md
inc/: algorithm.h  circle.h  paddle.h
lib/: box2d.lib
src/: algorithm.cpp  circle.cpp  myPongCmake.cpp  paddle.cpp
